# JetRover-ros2_ws

./: .cursorrules  .gitattributes  .gitignore  .robotrc  .typerc
.github/: copilot-instructions.md
.github/instructions/: Copilot_Robotics_Guide.instructions.md  JetRover_RoboCollector.instructions.md
app/: .cursorrules
app/app/: ar_app.py  hand_gesture.py  hand_trajectory_node.py  lidar_controller.py  line_following.py  object_tracking.py
app/launch/: start_app.launch.py
bringup/: .cursorrules
calibration/launch/: linear_calib.launch.py
large_models_examples/config/: automatic_pick_roi.yaml
large_models_examples/large_models_examples/: llm_control_move.py  llm_visual_patrol.py  track_anything.py  vllm_navigation.py  vllm_track.py  vllm_with_camera.py
navigation/config/: nav2_controller_teb.yaml  nav2_params.yaml
navigation/launch/: navigation.launch.py  rtabmap_navigation.launch.py
navigation/rviz/: navigation_controller.rviz  navigation_desktop.rviz  navigation_transport.rviz  transport_dietitianl.rviz
peripherals/: .cursorrules
peripherals/launch/: depth_camera.launch.py  lidar_view.launch.py  teleop_key_control.launch.py  usb_cam.launch.py
peripherals/peripherals/: joystick_control.py
robocollector/: GAZEBO_SIMULATION.md  QUICKSTART.md  README.md  SIMULATION_TESTING.md  test_simulation.sh
robocollector/robocollector_bringup/: package.xml  setup.cfg  setup.py
robocollector/robocollector_bringup/launch/: bringup_robocollector_localization.launch.py  bringup_robocollector_navigation.launch.py  gazebo_simulation.launch.py  robocollector.launch.py  simulation.launch.py
robocollector/robocollector_bringup/resource/: robocollector_bringup
robocollector/robocollector_bringup/worlds/: robocollector.world
robocollector/robocollector_controller/: package.xml  setup.cfg  setup.py
robocollector/robocollector_manipulation/: package.xml  setup.cfg  setup.py
robocollector/robocollector_navigation/: CMakeLists.txt  package.xml
robocollector/robocollector_navigation/config/: nav2_params.yaml  slam_toolbox.yaml
robocollector/robocollector_navigation/launch/: nav2_bringup.launch.py  slam_toolbox.launch.py
robocollector/robocollector_navigation/src/: tf_broadcaster.cpp
slam/launch/: rtabmap_slam.launch.py  (+1 more)
(+107 files in other folders)
