<?xml version="1.0"?>
<package format="3">
  <name>robocollector_bringup</name>
  <version>0.1.0</version>
  <description>Bringup and launch orchestration for JetRover RoboCollector.</description>
  <maintainer email="maher@example.com">Maher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robocollector_navigation</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
