<?xml version="1.0"?>
<package format="3">
  <name>robocollector_navigation</name>
  <version>0.1.0</version>
  <description>Navigation stack integration and configs for JetRover RoboCollector (Nav2 + SLAM).</description>

  <maintainer email="maher@example.com">Maher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Nav2 and slam_toolbox are runtime deps via launches/configs -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
